# altalena

./: CMakeLists.txt  HowToBuild.md  Makefile.am  ProjectHome.md  apr.vsprops  authenticationexample.md  configuration.md  configure.ac  csharpexamples.md  example_free_switch_conference.md  global.md  install.bat  logger.md  mrcpsession.md  ortp.def  pollytheparrotapp.md  rtpproxy.md  rtspsession.md  selector.md  sipcall.md  streamer.md
ais/: Ais.h  ProcAis.cpp  ais.vcproj  stdafx.h
branches/ivrworx-lnx/src/iw_core/: CMakeLists.txt  CmdLine.cpp  Configuration.h  DllHelpers.h  IwBase.cpp  IwBase.h  IwUtils.h  LightweightProcess.cpp  LightweightProcess.h  LocalProcessRegistrar.cpp  Logger.cpp  Logger.h  LpHandle.cpp  Message.cpp  Message.h  ProcHandleWaiter.cpp  StdAfx.cpp  StdAfx.h  syslog-client.cpp
branches/ivrworx-lnx/src/kentcsp/: CMakeLists.txt
branches/ivrworx-lnx/src/kentcsp/src/: mutex.h
callfloweditor/: AboutForm.Designer.cs  AboutForm.resx  Altalena.vss  CallFlowShape.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  VisioDiagramValidator.cs  callfloweditor.csproj
ccu2/: ActiveObject.h  CCU2.vcproj  Call.cpp  Call.h  Ccu.cpp  Ccu.h  CcuCommon.h  CcuConfiguration.cpp  CcuConfiguration.h  CcuLogger.cpp  CcuLogger.h  CcuMessage.h  CcuUtils.h  CmdLine.cpp  CmdLine.h  Configuration.cpp  ConfigurationFactory.cpp  ConfigurationFactory.h  Console.h  IxCoreTest.cpp  JSONConfiguration.cpp  JSONConfiguration.h  LightweightProcess.cpp  LightweightProcess.h  LocalProcessRegistrar.cpp  LocalProcessRegistrar.h  Logger.cpp  Logger.h  LpHandle.cpp  LpHandle.h  Message.h  MockResipStack.cpp  MockResipStack.h  ProcIPCDispatcher.h  ProcPipeIPCDispatcher.cpp  ProcPipeIPCDispatcher.h  ProcSipStack.cpp  ProcSipStack.h  ProcTestStub.cpp  Profiler.cpp  (+19 more)
ccutest/: AisTest.h  CallWithRtpManagmentTest.cpp  CallWithRtpManagmentTest.h  CcuLpTest.cpp  CcuLpTest.h  CcuTest.cpp  CcuTest.vcproj  ImsTest.cpp  ImsTest.h  JsonConfigurationTest.cpp  JsonConfigurationTest.h  LpHandleTest.cpp  LpHandleTest.h  ProcImsStub.cpp  ProcImsStub.h  ProcRTPRelayStub.cpp  ProcRTPRelayStub.h  ProcStackStub.cpp  ProcStackStub.h  ProcTestStub.cpp  ProcTestStub.h  RTPRelayTest.cpp  VcsTest.cpp  VcsTest.h  conf.json  stdafx.h
csharpio/: Program.cs  csharpio.csproj  install.bat
emiplib-0.16.1/: emiplib.vcproj
ims/: Ims.h  ImsFactory.cpp  ImsFactory.h  ImsSession.cpp  ImsSession.h  ProcIms.cpp  ProcIms.h  ProcStreamer.cpp  ProcStreamer.h  StreamingObject.cpp  StreamingObject.h  ims.vcproj  stdafx.h
iw_cominterop/: ComAbstractOffer.cpp  ComAbstractOffer.rgs  ComCollection.cpp  ComCollection.h  ComCredentials.h  ComIVRWORX.cpp  ComSIPCall.cpp  ComSIPCall.h  ComSIPCall.rgs  IComIVRWORX.h  IComIVRWORX.rgs  ReadMe.txt  dlldata.c  iw_cominterop.aps  iw_cominterop.h  iw_cominterop.rc  iw_cominterop.rgs  iw_cominterop.vcproj  iw_cominterop_p.c  resource.h  stdafx.h
iw_core/: ActiveObject.cpp  ActiveObject.h  Call.cpp  Call.h  CmdLine.cpp  Configuration.cpp  Configuration.h  ConfigurationFactory.cpp  ConfigurationFactory.h  DllHelpers.cpp  ICall.cpp  ICall.h  IwBase.cpp  IwBase.h  IwUtils.h  JSONConfiguration.cpp  JSONConfiguration.h  LightweightProcess.cpp  LightweightProcess.h  LocalProcessRegistrar.cpp  LocalProcessRegistrar.h  Logger.cpp  Logger.h  LpHandle.cpp  LpHandle.h  Message.h  ProcHandleWaiter.h  ProcSipStack.cpp  ProcSipStack.h  ProcSqlite.h  Profiler.h  ResipCommon.cpp  ResipCommon.h  SipSessionHandlerAdapter.h  SipStackFactory.cpp  SqliteSession.h  UACAppDialogSet.cpp  UACDialogUsageManager.cpp  UACDialogUsageManager.h  UACUserProfile.cpp  (+8 more)
iw_dotnet/: AbstractOffer.cpp  AbstractOffer.h  AssemblyInfo.cpp  Credentials.cpp  Credentials.h  GenericOfferAnswerSession.cpp  GenericOfferAnswerSession.h  IvrWORX.cpp  IvrWORX.h  RtpProxySession.cpp  RtpProxySession.h  RtspSession.cpp  RtspSession.h  Selector.h  SipCall.cpp  SipCall.h  Stdafx.cpp  Stdafx.h  StreamerSession.h  StreamerSessoin.cpp  iw_dotnet.cpp  iw_dotnet.vcproj
iw_h323/: H323Call.h  OpalFactory.cpp  OpalFactory.h  ProcOpalH323.cpp  ProcOpalH323.h  iw_h323.vcproj  stdafx.h
iw_ims/: Ims.h  ImsSession.cpp  ImsSession.h  PortManager.cpp  PortManager.h  ProcIms.cpp  ProcIms.h  ims.vcproj  iw_ims.vcproj  stdafx.h
iw_ivr/: BridgeMacros.h  CallBridge.cpp  CallBridge.h  CallWithDirectRtp.cpp  CallWithDirectRtp.h  (+34 more)
(+1046 files in other folders)
